opam-version: "2.0"
version: "1.0"
authors: "Chris Nevers <christophernevers96@gmail.com>"
maintainer: "Chris Nevers <christophernevers96@gmail.com>"
homepage: "https://github.com/chrisnevers/ocaml-mysql"
bug-reports: "https://github.com/chrisnevers/ocaml-mysql/issues"
dev-repo: "git://github.com/chrisnevers/ocaml-mysql.git"
synopsis: "OCaml interface for mysql-connector-c"
build: [
["dune" "subst"] {pinned}
["dune" "build" "-p" name "-j" jobs]
]

depends: [
"dune" {build}
]
