(library
 (name pancakes)
 (public_name pancakes)
 (c_names pancakes_stubs)
 (c_flags         (:include c_flags.mysqlclient))
 (c_library_flags (:include c_library_flags.mysqlclient))
 (inline_tests)
 (preprocess
  (pps ppx_inline_test)))

(rule
  (targets c_flags.mysqlclient c_library_flags.mysqlclient)
  (deps (:discover config/discover.exe))
  (action (run %{discover} )))
